Fix linear gradient for DateTime component on iOS
On iOS, the linear-gradient on the .q-datetime-mask element indicated that the middle of the gradient use a color stop of "transparent 50%", using transparent in a linear-gradient is not support on mobile Safari. See https://stackoverflow.com/a/27118826

--- a/src/components/datetime/datetime.ios.styl
+++ b/src/components/datetime/datetime.ios.styl
@@ -79,7 +79,7 @@ body.desktop .q-datetime-col-wrapper
   left 0
   height 100%
   width 100%
-  background linear-gradient(to top, white, transparent 50%, white)
+  background linear-gradient(to top, white, rgba(255, 255, 255, 0.0) 50%, white)
   pointer-events none
 
 .q-datetime-highlight
